crux-mir/test/symb_eval/crux/multi.good
test multi/3a1fbbbh::fail1[0]: FAILED
test multi/3a1fbbbh::fail2[0]: FAILED
test multi/3a1fbbbh::fail3[0]: FAILED

failures:

---- multi/3a1fbbbh::fail1[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/crux/multi.rs:8:22: 8:27: error: in multi/3a1fbbbh::fail1[0]
[Crux]   attempt to add with overflow
[Crux] Found counterexample for verification goal
[Crux]   ./lib/crucible/lib.rs:37:41: 37:58 !test/symb_eval/crux/multi.rs:8:5: 8:33: error: in multi/3a1fbbbh::fail1[0]
[Crux]   MIR assertion at test/symb_eval/crux/multi.rs:8:5:
[Crux]   	x + 1 > x

---- multi/3a1fbbbh::fail2[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   internal: error: in multi/3a1fbbbh::fail2[0]
[Crux]   panicking::begin_panic, called from multi/3a1fbbbh::fail2[0]

---- multi/3a1fbbbh::fail3[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./lib/crucible/lib.rs:37:41: 37:58 !test/symb_eval/crux/multi.rs:20:5: 20:30: error: in multi/3a1fbbbh::assert_zero[0]
[Crux]   MIR assertion at test/symb_eval/crux/multi.rs:20:5:
[Crux]   	x == 0

[Crux] Overall status: Invalid.
